--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,33 +1,27 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Quotes</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Text</th>
-      <th>Image</th>
-      <th>Submitter</th>
-      <th>Speaker</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @quotes.each do |quote| %>
-      <tr>
-        <td><%= quote.text %></td>
-        <td><%= quote.image %></td>
-        <td><%= quote.submitter %></td>
-        <td><%= quote.speaker %></td>
-        <td><%= link_to 'Show', quote %></td>
-        <td><%= link_to 'Edit', edit_quote_path(quote) %></td>
-        <td><%= link_to 'Destroy', quote, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
 <%= link_to 'New Quote', new_quote_path %>
+
+
+<div class="row">
+  <div class="col-xs-12 col-md-6 col-md-offset-3">
+    <% @quotes.each do |quote| %>
+      <div class="well">
+        <h2><%= quote.text %></h2>
+        <p><%= image_tag quote.image, class: 'img-responsive' %></p>
+        <p>
+          <strong>Who said it:</strong> <%= quote.speaker %>
+        </p>
+        <p>
+          <strong>Submitted by:</strong> <%= quote.submitter %>
+        </p>
+        <p> <%= link_to 'Show', quote %> |
+            <%= link_to 'Edit', edit_quote_path(quote) %> |
+            <%= link_to 'Destroy', quote, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </p>
+      </div>
+    <% end %>
+  </div>
+</div>
+
