--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,15 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Quotes</h1>
-<%= link_to 'New Quote', new_quote_path %>
+<div class="row">
+  <div class="col-md-12 col-xs-12">
+    <div class="page-header">
+      <h1>Heard at Starter School</h1>
+      <h3>Inspiration, motivation, rubber ducking, and random musings from 30 N. Racine</h3>
+      <h4><%= link_to 'Add a new quote', new_quote_path %></h4>
+    </div>
+  </div>
+</div>
 
 
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
     <% @quotes.each do |quote| %>
       <div class="well">
-        <h2><%= quote.text %></h2>
         <p><%= image_tag quote.image, class: 'img-responsive' %></p>
+        <blockquote>
+          <%= quote.text %>
+        </blockquote>
         <p>
           <strong>Who said it:</strong> <%= quote.speaker %>
         </p>
