Hides action links

--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -25,10 +25,10 @@
         <p>
           <strong>Submitted by:</strong> <%= quote.submitter %>
         </p>
-        <p> <%= link_to 'Show', quote %> |
+        <!-- <p> <%= link_to 'Show', quote %> |
             <%= link_to 'Edit', edit_quote_path(quote) %> |
             <%= link_to 'Destroy', quote, method: :delete, data: { confirm: 'Are you sure?' } %>
-        </p>
+        </p> -->
       </div>
     <% end %>
   </div>
